cluster/gitops/networking/node-network-operator/operator/netpol.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: node-network-operator
specs:
  - description: cluster
    endpointSelector:
      matchLabels:
        app.kubernetes.io/name: node-network-operator
        app.kubernetes.io/controller: cluster
        app.kubernetes.io/instance: node-network-operator
    egress:
      # k8s resource management
      - toEntities:
          - kube-apiserver
        toPorts:
          - ports:
              - port: "6443"
                protocol: TCP
    ingress:
      # Kubelet for healthcheck
      - fromEntities:
          - host
        toPorts:
          - ports:
              - port: "9334"
                protocol: TCP
      # Webhook calls
      - fromEntities:
          - kube-apiserver
        toPorts:
          - ports:
              - port: "9443"
      # Metrics
      - fromEndpoints:
          - matchLabels:
              io.kubernetes.pod.namespace: monitoring
              endpoints.netpols.home.arpa/metrics-scraper: "true"
        toPorts:
          - ports:
              - port: "9974"
                protocol: TCP
